<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:onClick="simpleAA"
        android:text="@string/simpleAA"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextFont" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:onClick="dayAA"
        android:text="@string/dayAA"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextFont" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:onClick="personAA"
        android:text="@string/personAA"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextFont" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:onClick="showRentTip"
        android:text="@string/showRentTip"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextFont" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/circle_button"
        android:gravity="center"
        android:onClick="showAboutAAHelper"
        android:text="@string/showAboutAAHelper"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextFont" />

</LinearLayout>