<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AAActivities.SimpleAAActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:letterSpacing="0.25"
        android:text="@string/simpleAA"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/titleFont" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonArea"
        android:layout_below="@id/title">

    </ListView>

    <LinearLayout
        android:id="@+id/buttonArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:onClick="computeTheFee"
            android:text="@string/doCompute"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/buttonTextFont" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:onClick="returnHomepage"
            android:text="@string/returnHomepage"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/buttonTextFont" />
    </LinearLayout>

</RelativeLayout>
